--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy-local": "npx hardhat run scripts/deploy.js --network localhost",
+    "node-local": "npx hardhat node"
   },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.4",
@@ -28,6 +30,6 @@
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.12"
+    "tailwindcss": "^3.0.15"
   }
 }
