--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.4.1",
-    "axios": "^0.24.0",
     "chai": "^4.3.4",
     "dotenv": "^11.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
-    "ipfs-http-client": "^55.0.0",
+    "ipfs-core": "^0.17.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
